# Potentiostat-driver-pyBEEP

./: .pre-commit-config.yaml  README.md  project.toml  pyproject.toml  requirements.txt  ruff.py  setup.py  testing.py
.github/actions/setup/: action.yaml
.github/workflows/: code_quality.yaml
examples/: example_CA.py  example_CA_TIA.py  example_CA_TIA_test.py  example_CV.py  example_CV_TIA.py  example_CV_TIA_test.py  example_GCV.py  example_LSV.py  example_OCP.py  example_PSTEP.py  examples_methods.py  methods_examples.py
src/: controller.py  plotter.py  testing.py  utils.py
src/pyBEEP/: __init__.py  constants.py  controller.py  device.py  logger.py  plotter.py  utils.py  waveform_params.py  waveforms.py  waveforms_gal.py  waveforms_pot.py
src/pyBEEP/datapipeline/: __init__.py  cli.py  data_processing.py  signal_processing.py  types.py  visualization.py
src/pyBEEP/driver/: __init__.py  controller.py  device.py  logger.py  plotter.py
src/pyBEEP/driver/measurement_modes/: measurement_modes.py  waveform_outputs.py  waveform_params.py  waveforms_gal.py  waveforms_ocp.py  waveforms_pot.py
src/pyBEEP/driver/utils/: __init__.py  constants.py
src/pyBEEP/gui/: __init__.py  main_window.py
src/pyBEEP/measurement_modes/: measurement_modes.py  waveform_outputs.py  waveform_params.py  waveforms_gal.py  waveforms_ocp.py  waveforms_pot.py
src/pyBEEP/utils/: __init__.py  constants.py  utils.py
tests/: test_datapipeline.py  test_init.py
